[gd_scene load_steps=2 format=3 uid="uid://d2event123"]

[ext_resource type="Script" path="res://scenes/ui/screens/EventScreen.gd" id="1_event"]

[node name="EventScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_event")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.08, 0.08, 0.12, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="VBox" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Header" type="HBoxContainer" parent="MarginContainer/VBox"]
layout_mode = 2

[node name="Title" type="Label" parent="MarginContainer/VBox/Header"]
layout_mode = 2
size_flags_horizontal = 3
text = "üé™ Etkinlikler"
theme_override_font_sizes/font_size = 40
theme_override_colors/font_color = Color(1, 0.6, 0.8, 1)

[node name="BackButton" type="Button" parent="MarginContainer/VBox/Header"]
custom_minimum_size = Vector2(120, 60)
layout_mode = 2
text = "Geri"
theme_override_font_sizes/font_size = 24

[node name="TabContainer" type="TabContainer" parent="MarginContainer/VBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 24

[node name="Aktif" type="ScrollContainer" parent="MarginContainer/VBox/TabContainer"]
layout_mode = 2

[node name="ActiveList" type="VBoxContainer" parent="MarginContainer/VBox/TabContainer/Aktif"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 15

[node name="Yakla≈üan" type="ScrollContainer" parent="MarginContainer/VBox/TabContainer"]
visible = false
layout_mode = 2

[node name="UpcomingList" type="VBoxContainer" parent="MarginContainer/VBox/TabContainer/Yakla≈üan"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 15

[node name="Ge√ßmi≈ü" type="ScrollContainer" parent="MarginContainer/VBox/TabContainer"]
visible = false
layout_mode = 2

[node name="HistoryList" type="VBoxContainer" parent="MarginContainer/VBox/TabContainer/Ge√ßmi≈ü"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 15
